ping + swagger
